tests/new_bad_type_arg_value.stderr
tests/new_bad_type_arg_value.sl:5:20: error: SL2003: unknown type
