tests/new_bad_type_arg_value.sl

fn main() i32 {
    var ma Allocator
    var t i32
    var p *i32 = new t with &ma
    return p as i32
}
